# ePy_docs

./: .gitignore  API_REFERENCE.md  AUTO_FIX_text_refs.py  BIBLIOGRAFIA_FIX.md  CACHE_FIX_INSTRUCTIONS.md  CAMBIOS_API_UNIFICADA.md  COLOR_FIX_SUMMARY.md  COMO_AGREGAR_REFERENCIAS.md  CORRECCIONES_COMPLETAS.md  CRITICAL_TEST_ANALYSIS.md  DIAGNOSTICO_CITAS_LISTAS.md  DIRECTORY_FIX_SUMMARY.md  ELIMINACION_RETROCOMPATIBILIDAD.md  ESTADO_CORRECCIONES.md  FIX_SUMMARY.md  FLUJO_GENERACION.md  FONT_APPLICATION_SOLUTION.md  GENERAR_PRUEBAS.py  GUIA_MODIFICAR_RUTAS.md  GUIA_NOTEBOOK_STRUCTURAL.md  IMPLEMENTACION_CALLOUTS.md  IMPLEMENTATION_COMPLETE.md  MULTICOLUMN_TABLE_FIX.md  PALETTE_FIXES.md  README.md  REAL_USER_CASE_VALIDATION.md  REFACTORIZACION_API_LIMPIA.md  REFACTORIZACION_PURA_DELEGACION.md  REPORTE_NOTEBOOK_LIMPIO.md  RESOLUCION_COMPLETA.md  RESTART_HELPER.py  RESUMEN_CAMBIOS_CONFIG_Y_TABLAS.md  RESUMEN_CORRECCIONES_QMD.py  RESUMEN_EJECUTIVO_CAMBIOS.md  RESUMEN_FINAL.md  RESUMEN_FINAL_CORRECCIONES.md  SOLUCION_LATEX_FONTS.md  SOLUCION_WRITER_DEFINITIVA.py  SYNC_FILES_CLEANUP_SUMMARY.md  SYNC_FILES_ELIMINACION_COMPLETA.md  (+219 more)
.agent/skills/book-content-generator/: SKILL.md
.agent/skills/book-generation-pipeline/: SKILL.md
.agent/skills/book-index-creator/: SKILL.md
.agent/skills/code-review/: SKILL.md
.agent/skills/epy-code-formatter/: SKILL.md
.agent/skills/epy-qmd-formatter/: SKILL.md
.agent/skills/epy-suite-full-pipeline/: SKILL.md
.agent/skills/epy-validation-audit/: SKILL.md
.agent/skills/image-creator/: SKILL.md
.agent/skills/skill-creator/: SKILL.md
configuration/components/: equations.json  images.json  notes.json  tables.json
configuration/files/: mapper.json  reader_config.json
configuration/reports/: layouts.json
configuration/styler/: colors.json  styles.json
configuration/units/: conversion.json  format.json  units.json
data/configuration/components/: colors.json  notes.json  page.json  report.json  tables.json  text.json
data/configuration/core/: setup.json
data/configuration/project/: project.json
data/configuration/units/: format.json  units.json
data/robot/: columnas_30x40.csv  combinations copy.csv  combinations.csv  elements.csv  frame_forces.csv  nodes.csv  reactions.csv  reactions_copy.csv  vigas_35x45.csv  walls_mm1_20.csv  walls_mm1_20_T.csv
data/user/: Informe_EMSA.ipynb  Report example.md  documento_complejo.md  documento_puente.qmd  project_info.qmd  rigid_blocks.csv  rigid_blocks_copy.csv
data/user/brand/: Template.docx
data/user/document/: sample_quarto.qmd  sample_section.md
data/user/requisitos/: Requisitos.md
developing_tests/: audit_dimension_setup.py  test_001_background_color_creative.py  test_002_creative_pdf_generation.py  test_003_sync_files_compliance.py  test_004_directory_monitoring.py  test_005_creative_background_investigation.py  test_006_sync_violation_detection.py  test_007_final_compliance_verification.py
docs/: log.md
examples/: Libro_CEC.ipynb  bibliography_example.py  demo_epy_docs.ipynb  demo_linkedin_epy_docs_fixed.ipynb  gener ate_catalog.py  layouts.ipynb  referencias_completo_ejemplo.py
examples/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
examples/chapters/: Cap01_Materiales_Concreto.qmd  Cap02_Codigos_Especificaciones.qmd  Cap03_Fabricacion_Concreto.qmd  Cap04_Encofrado_Formaletas.qmd  Cap05_Herramientas_Equipos.qmd  Cap06_Prefabricados.qmd  Cap07_Documentacion_Tecnica.qmd  Cap08_Seguridad_Ocupacional.qmd  Cap09_Sostenibilidad.qmd  Cap10_Ingenieria_Forense.qmd
src/: __init__.py
src/ePy_docs/: __init__.py  project_info.epyson  report.epyson  writers.py
src/ePy_docs/api/: __init__.py  file_management.py  file_manager.py  paper.py  quick_setup.py  report.py  units.py
src/ePy_docs/components/: __init__.py  base.py  categories.json  chu nks.py  chunks.py  code.json  code.py  colors.json  colors.py  configurator.py  dataframes.py  equations.json  equations.py  format.json  format.py  generator.py  html.json  html.py  images.json  images.py  layout.py  mapper.py  markdown.py  math.json  math.py  notes.json  notes.py  page.json  page.py  pages.json  pages.py  paper.json  pdf.json  pdf.py  project_info.json  project_info.py  quarto.py  references.json  references.py  report.json  (+8 more)
src/ePy_docs/config/: assets.epyson  callouts.epyson  code.epyson  colors.epyson  config_manager.py  core.epyson  document_types.epyson  docx.epyson  figures.epyson  fonts.epyson  format.epyson  generation.epyson  html.epyson  images.epyson  loader.py  mapper.epyson  master.epyson  modular_loader.py  notes.epyson  palettes.epyson  paths.py  pdf.epyson.deprecated  project.epyson  quarto.epyson  reader.epyson  references.epyson  setup.epyson  setup.py  tables.epyson  text.epyson
src/ePy_docs/core/: __init__.py  _code.py  _colors.py  _columns.py  _config.py  _counters.py  _data.py  _document.py  _format.py  _html.py  _images.py  _images.py.backup  _info.py  _layouts.py  _layouts.py.obsolete  _markdown.py  _notes.py  _paths.py  _pdf.py  _project.py  _quarto.py  _references.py  _table_core.py  _tables.py  _text.py  _validation.py  _validators.py  _word.py  base.py  content.py  generator.py  html.py  layout_state.py  layouts.json  layouts.py  mapper.py  markdown.py  pdf.py  quarto.json  quarto.py  (+8 more)
src/ePy_docs/files/: __init__.py  data.py  importer.py  mapper.py  reader.json  reader.py  (+2 more)
test_html_references/: references.bib
tests/: conftest.py
tests/unit/: test_all_layouts_fonts.py  test_auto_width_adjustment.py  test_book_bibliography_issues.py  test_column_span_direction.py  test_column_system.py  test_columns.py  test_config.py  test_config_integrity.py  test_custom_fonts.py  test_document_types_specific.py  test_engineering_palette.py  test_font_application.py  test_font_system.py  test_format.py  test_images.py  test_integration_complete.py  test_language_support.py  test_layout_styling.py  test_pdf_fonts.py  test_plot_auto_width.py  test_plot_font_fix.py  test_show_figure.py  test_simplified_functionality.py  test_validation.py  test_writers.py  test_writers_comprehensive.py
(+166 files in other folders)
