[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ePy_docs"
version = "0.0.0"
description = "Package for engineering reports"
readme = "README.md"
authors = [
  {name = "Angel Navarro-Mora", email = "ahnavarro@anmingenieria.com"}
]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pydantic>=2.0.0",
  "matplotlib>=3.7.0",
  "pytest>=7.0.0",
  "scikit-learn>=1.2.0",
]

[project.urls]
"Homepage" = "https://github.com/username/ePy_docs"
"Bug Tracker" = "https://github.com/username/ePy_docs/issues"

[tool.setuptools]
packages = ["ePy_docs"]
package-dir = {"" = "src"}
