[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ePy_docs"
version = "0.0.0"
description = "Package for engineering reports"
readme = "README.md"
authors = [
  {name = "Angel Navarro-Mora", email = "ahnavarro@anmingenieria.com"}
]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pydantic>=2.0.0",
  "matplotlib>=3.7.0",
  "pytest>=7.0.0",
  "scikit-learn>=1.2.0",
  "ePy_units>=0.1.0",
  "ePy_files>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/username/ePy_docs"
"Bug Tracker" = "https://github.com/username/ePy_docs/issues"

[tool.setuptools]
packages = ["ePy_docs"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | _internals
  | build
  | dist
  | results
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["__pycache__", "_internals", ".venv", "results"]
known_first_party = ["ePy_docs"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["_internals/", "__pycache__/", "build/", "results/"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
    "."
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/ePy_docs"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_internals/*",
    "*/.venv/*",
    "*/results/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
